preferences + login account

--- a/beEx/src/main/res/values/ids.xml
+++ b/beEx/src/main/res/values/ids.xml
@@ -19,6 +19,6 @@
     <!--
         Generate an id which can be used when the location menu item is added in MainActivity
     -->
-    <item name="menu_location" type="id"/>
+    <!--<item name="menu_location" type="id"/>-->
 
 </resources>
