--- a/beEx/src/main/res/menu/main.xml
+++ b/beEx/src/main/res/menu/main.xml
@@ -2,10 +2,12 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:support="http://schemas.android.com/apk/res-auto" >
-    <!--
-           Here we create an item, setting support:showAsAction to display the item as an action if
-           there's room on the compatible Action Bar.
-       -->
+    <item
+        android:id="@+id/menu_add"
+        android:icon="@drawable/ic_action_new"
+        android:title="@string/menu_add"
+        support:showAsAction="ifRoom"/>
+
     <item
         android:id="@+id/menu_refresh"
         android:icon="@drawable/ic_action_refresh"
@@ -23,5 +25,5 @@
         android:id="@+id/menu_settings"
         android:icon="@drawable/ic_action_settings"
         android:title="@string/menu_settings"
-        support:showAsAction="never"/>
+        support:showAsAction="ifRoom"/>
 </menu>
