--- a/beEx/src/main/res/layout/activity_login.xml
+++ b/beEx/src/main/res/layout/activity_login.xml
@@ -68,7 +68,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_alignParentBottom="true"
                     android:checked="true"
-                    android:id="@+id/checkBox" />
+                    android:id="@+id/checkBoxSSL" />
 
             </RelativeLayout>
 
