--- a/beEx/src/main/res/xml/authenticator.xml
+++ b/beEx/src/main/res/xml/authenticator.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <account-authenticator xmlns:android="http://schemas.android.com/apk/res/android"
-        android:accountType="com.bedroid.beEx"
+        android:accountType="com.bedroid.beEx.account"
         android:icon="@drawable/ic_action_refresh"
         android:smallIcon="@drawable/ic_action_refresh"
         android:label="@string/authlabel"
+        android:accountPreferences="@xml/settings"
 />
