--- a/beEx/src/main/res/values/strings_activity_settings.xml
+++ b/beEx/src/main/res/values/strings_activity_settings.xml
@@ -1,30 +1,7 @@
 <resources>
     <string name="title_activity_settings">Settings</string>
 
-    <!-- Strings related to Settings -->
-
-    <!-- Example General settings -->
-    <string name="pref_header_general">General</string>
-
-    <string name="pref_title_social_recommendations">Enable social recommendations</string>
-    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history</string>
-
-    <string name="pref_title_display_name">Display name</string>
-    <string name="pref_default_display_name">John Smith</string>
-
-    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
-    <string-array name="pref_example_list_titles">
-        <item>Always</item>
-        <item>When possible</item>
-        <item>Never</item>
-    </string-array>
-    <string-array name="pref_example_list_values">
-        <item>1</item>
-        <item>0</item>
-        <item>-1</item>
-    </string-array>
-
-    <!-- Example settings for Data & Sync -->
+    <!-- Settings for Data & Sync -->
     <string name="pref_header_data_sync">Data &amp; sync</string>
 
     <string name="pref_title_sync_frequency">Sync frequency</string>
@@ -34,16 +11,41 @@
         <item>1 hour</item>
         <item>3 hours</item>
         <item>6 hours</item>
+        <item>12 hours</item>
+        <item>daily</item>
         <item>Never</item>
     </string-array>
     <string-array name="pref_sync_frequency_values">
-        <item>15</item>
-        <item>30</item>
-        <item>60</item>
-        <item>180</item>
-        <item>360</item>
+        <item>900</item>
+        <item>1800</item>
+        <item>3600</item>
+        <item>10800</item>
+        <item>21600</item>
+        <item>43200</item>
+        <item>86400</item>
         <item>-1</item>
     </string-array>
+
+    <string name="pref_title_sync_range_before">Past range to sync</string>
+    <string name="pref_title_sync_range_after">Future range to sync</string>
+    <string-array name="pref_sync_range_title">
+        <item>1 day</item>
+        <item>2 days</item>
+        <item>1 week</item>
+        <item>2 weeks</item>
+        <item>1 month</item>
+        <item>none</item>
+    </string-array>
+    <string-array name="pref_sync_range_values">
+        <item>86400</item>
+        <item>172800</item>
+        <item>604800</item>
+        <item>1209600</item>
+        <item>2678400</item>
+        <item>-1</item>
+    </string-array>
+
+
 
     <string name="pref_title_system_sync_settings">System sync settings</string>
 
